# edgetech-audio-recorder

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  asound.conf  audio-record.py  audio-recorder.env  commands.txt  docker-compose.yaml  example.env  record.sh
.github/workflows/: code-quality.yaml  code-quality.yml  docker-build.yaml  docker-cleanup.yaml  docker-test.yaml  dockerbuild.yml  release-tag.yaml  releasetag.yml
audio-recorder/: Dockerfile  asound.conf  audio_pub_sub.py  pyproject.toml  requirements.txt
audiorecorder/: Dockerfile  audio_pub_sub.py
data/: audio.flac
