[tool.poetry]
name = "audiorecorder"
version = "0.1.0"
description = "MQTT client to record audio using the specified soundcard and cycle using the C2 module"
authors = ["Ari <ari.chadda@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
